# web-vuln-scanner

./: .gitignore  .gitignore.bak  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  cmd_advanced.json  csrf.json  dom_xss.json  dom_xss_google.json  project_structure.txt  pyproject.toml  requirements.txt  scanner_plan.md  urls.txt
.github/workflows/: tests.yml
bench/: run_bench.py
core/: forms.py  logger.py  scanner.py  utils.py
docs/: bench_results.csv  bench_results.md  benchmarks.md
payloads/: payloads.py
reporting/: csv_report_generator.py  html_report_generator.py  output_utils.py  report_generator.py  text_report_generator.py
scanners/: blind_sqli_scanner.py  cmd_injection_scanner.py  csrf_scanner.py  directory_traversal.py  dom_xss_scanner.py  headers_cookies_check.py  misconfiguration_scanner.py  open_redirect_scanner.py  sqli_scanner.py  xss_scanner.py
tests/: test_cli_entry.py  test_csrf_scanner.py  test_forms.py  test_logger.py  test_sqli_scanner.py  test_utils.py  test_xss_scanner.py
