[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-vuln-scanner"
version = "0.1.0"
description = "A simple web vulnerability scanner"
authors = [
    { name = "Kartik Budhlakoti", email = "kartikbudhlako@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# Runtime dependencies
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "selenium>=4.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "pytest-metadata",
    "pipdeptree",
]

[tool.setuptools]
# ✅ Respect MANIFEST.in
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "core.*", "scanners", "scanners.*", "payloads", "payloads.*", "reports", "reports.*"]
exclude = ["tests", "tests.*", "docs", "docs.*"]


[tool.setuptools.package-data]
# ✅ Ensure extra resources are bundled
"reports" = ["*.txt", "*.csv", "*.html", "*.json"]
"payloads" = ["*.txt", "*.json"]
